# grpc_hello_world

./: .gitignore  .gitmodules  CMakeLists.txt  package.json  readme.md
be/: CMakeLists.txt  MeshServer.cpp  MeshServer.h  main.cpp  server.cpp
be/3rd/: CMakeLists.txt
be/uuid/: CMakeLists.txt  uuid.h  uuid_test.cpp
grpc-ng-client/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
grpc-ng-client/e2e/src/: app.e2e-spec.ts
grpc-ng-client/scripts/: convertProtos.js
grpc-ng-client/src/: index.html  styles.css
grpc-ng-client/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
grpc-ng-client/src/app/services/: host-bridge.service.ts  mesh.service.ts  stlloader.service.ts  stlstub-loader.service.ts
grpc-ng-client/src/app/viewer/: viewer.component.ts
grpc-ng-client/src/app/viewer-wrapper/: viewer-wrapper.component.css  viewer-wrapper.component.html  viewer-wrapper.component.ts
grpc-ng-client/src/app/viewer/services/: contour-retriever.service.ts  mesh.service.ts  mouse3dposition.service.ts  stlreader.service.ts  viewer.mesh.service.ts
grpc-ng-client/src/assets/: heart.stl
protos/: MeshUtils.proto  helloworld.proto
scripts/: dockerRun.js  envoy.yaml  runExec.js
src/: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp
src/be/: server.h
src/protos/: helloworld.proto
